@@ -2959,7 +2959,7 @@ check_default_args (tree x)
 	{
 	  cp_error_at ("default argument missing for parameter %P of `%+#D'",
 		       i, x);
-	  break;
+	  TREE_PURPOSE (arg) = error_mark_node;
 	}
     }
 }
